removed typos from tex layout and added system build commands to ruby script

--- a/latex_hw_template.tex
+++ b/latex_hw_template.tex
@@ -57,8 +57,6 @@
 \renewcommand\headrulewidth{0.4pt} % Size of the header rule
 \renewcommand\footrulewidth{0.4pt} % Size of the footer rule
 
-\setlength\parindent{0pt} % Removes all indentation from paragraphs
-
 %----------------------------------------------------------------------------------------
 %	DOCUMENT STRUCTURE COMMANDS
 %	Skip this unless you know what you're doing
@@ -111,7 +109,7 @@
 \newcommand{\hmwkClass}{COURSE} % Course/class
 \newcommand{\hmwkClassTime}{} % Class/lecture time
 \newcommand{\hmwkClassInstructor}{\: PROFESSOR} % Teacher/lecturer
-\newcommand{\hmwkAuthorName}{AUTHOR`} % Your name
+\newcommand{\hmwkAuthorName}{AUTHOR} % Your name
 
 %----------------------------------------------------------------------------------------
 %	TITLE PAGE
