Script will now take in the pwd and create a graphics path
Gemspec updated respectively

--- a/lib/latex_hw_template.tex
+++ b/lib/latex_hw_template.tex
@@ -10,7 +10,7 @@
 %
 % Note:
 % The \lipsum[#] commands throughout this template generate dummy text
-% to fill the template out. These commands should all be removed when 
+% to fill the template out. These commands should all be removed when
 % writing assignment content.
 %
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
@@ -27,7 +27,7 @@
 \usepackage{cancel}
 \usepackage{tikz}
 \usepackage{graphicx}
-\usepackage[margin=1in]{geometry} 
+\usepackage[margin=1in]{geometry}
 \usetikzlibrary{automata,positioning}
 \usepackage{fancyhdr} % Required for custom headers
 \usepackage{lastpage} % Required to determine the last page for the footer
@@ -36,13 +36,14 @@
 \usepackage{lipsum} % Used for inserting dummy 'Lorem ipsum' text into the template
 \usepackage{enumitem}
 \usepackage{graphicx}
+\graphicspath{GRAPHICSPATH}
 % Margins
 \topmargin=-0.45in
 \evensidemargin=0in
 \oddsidemargin=0in
 \textwidth=6.5in
 \textheight=9.0in
-\headsep=0.25in 
+\headsep=0.25in
 
 \linespread{1.1} % Line spacing
 
@@ -99,7 +100,7 @@
 }{
 \enterProblemHeader{} % Header and footer after the environment
 }
-   
+
 %----------------------------------------------------------------------------------------
 %	NAME AND CLASS SECTION
 %----------------------------------------------------------------------------------------
